--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shanti&display=swap" rel="stylesheet" />
     <meta class="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>William Jin | Design Everything</title>
+    <title>William Jin | Design Anything</title>
     <!-- Don't forget to add your metadata here -->
     <link rel="stylesheet" href="css/style.min.css" />
     <link rel="stylesheet" href="css/myStyle.css" />
@@ -140,9 +140,18 @@
             <p class="expanded__text" style="color: #fff;">
               Two projects during my 12-week internship at VMware.
             </p>
+            <a
+              target="_blank"
+              href="https://www.figma.com/proto/8Xp4Lz4rBx2HqWwu6sqCKx/Internship-Presentation?node-id=4%3A0&viewport=457%2C261%2C0.1459026038646698&scaling=min-zoom"
+              class="resume button button__primary loud-link-hover"
+              style="letter-spacing: 1px;"
+              data-sound="button3"
+            >
+              slides
+            </a>
           </div>
 
-          <div class="expanded__media" style="">
+          <!-- <div class="expanded__media" style="">
             <a
               href="https://www.figma.com/proto/8Xp4Lz4rBx2HqWwu6sqCKx/Internship-Presentation?node-id=4%3A0&viewport=457%2C261%2C0.1459026038646698&scaling=min-zoom"
               class="loud-link-hover"
@@ -156,7 +165,7 @@
                 style="margin-top: 250px; margin-bottom: 250px; margin-left: 20px;"
               />
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -193,14 +202,7 @@
           </div>
 
           <div class="expanded__media" style="width: 55%;">
-            <a
-              href="https://williamj-in.github.io/tiny-todo-list/#/"
-              target="blank"
-              class="loud-link-hover"
-              data-sound="button3"
-            >
-              <img class="landing_img" src="./images/Tiny/title_new.png" width="100%" style="margin-left: 7rem;" />
-            </a>
+            <img src="./images/Tiny/title_new.png" width="100%" style="margin-left: 7rem;" />
           </div>
         </div>
       </div>
@@ -217,12 +219,18 @@
             <p class="expanded__text" style="color: white;">
               A queue-based news app for commuters taking public transit to make their life more meaningful.
             </p>
+            <a
+              href="Quenews.html"
+              class="resume button button__primary loud-link-hover"
+              style="letter-spacing: 1px;"
+              data-sound="button3"
+            >
+              Design Process
+            </a>
           </div>
 
           <div class="expanded__media">
-            <a href="Quenews.html" class="loud-link-hover" data-sound="button3">
-              <img class="landing_img" src="./images/Quenews/Queue_Mockup.png" width="70%" />
-            </a>
+            <img src="./images/Quenews/Queue_Mockup.png" width="70%" />
           </div>
         </div>
       </div>
@@ -239,17 +247,18 @@
             <p class="expanded__text" style="color: #ffffff;">
               Several projects during my internship in IBM.
             </p>
+            <a
+              href="IBM.html"
+              class="resume button button__primary loud-link-hover"
+              style="letter-spacing: 1px;"
+              data-sound="button3"
+            >
+              Internship Projects
+            </a>
           </div>
 
           <div class="expanded__media">
-            <a href="IBM.html" class="loud-link-hover" data-sound="button3">
-              <img
-                class="landing_img"
-                src="./images/IBM/0.png"
-                width="80%"
-                style="margin-top: 150px; margin-bottom: 150px;"
-              />
-            </a>
+            <img src="./images/IBM/0.png" width="80%" style="margin-top: 150px; margin-bottom: 150px;" />
           </div>
         </div>
       </div>
