--- a/Mario.html
+++ b/Mario.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta class="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>William Jin | Design Everything</title>
+    <title>William Jin | Design Anything</title>
     <!-- Don't forget to add your metadata here -->
     <link rel='stylesheet' href='css/style.min.css' />
     <style>
@@ -637,7 +637,7 @@
                     <h3>Thinking from the users</h3>
                     <p>
                         I learned a lot during the user research and was quite surprised about why students don't have the motivation to report issues. It's difficult to educate students to volunteer to report issues, but here comes what I love most about design - we can make
-                        everything better by simplifying the reporting process, giving them rewards, and by pushing a little bit: only allow them to track an issue after reporting it.
+                        Anything better by simplifying the reporting process, giving them rewards, and by pushing a little bit: only allow them to track an issue after reporting it.
                     </p>
                     <h3>Less is more</h3>
                     <P>It's not always comfortable to simplify my design. Here's what I learned: it's not enough to find a way to solve the problem. It's better if you can find the easiest way to solve the problem.</P>
