--- a/Pianooooo.html
+++ b/Pianooooo.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head> <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"><meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>William Jin | Design Everything</title>
+	<title>William Jin | Design Anything</title>
 	<link rel='stylesheet' href='css/style.min.css' />
 	<style>
 		.shadow{
