--- a/Quenews.html
+++ b/Quenews.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta class="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>William Jin | Design Everything</title>
+    <title>William Jin | Design Anything</title>
     <!-- Don't forget to add your metadata here -->
     <link rel='stylesheet' href='css/style.min.css' />
     <link rel='stylesheet' href='css/myStyle.css' />
