--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 25%;">
                 <strong>Hi, I'm William !</strong>
                 <br />
-                <span style="font-size: 2rem; font-weight: 500;">I design (almost) everything.</span>
+                <span style="font-size: 2rem; font-weight: 500;">I design (almost) anything.</span>
               </h1>
               <div style="width: 100%;">
                 <p class="expanded__text">
