--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="css/myStyle.css" />
   </head>
 
-  <body style="font-family: 'Roboto', sans-serif;">
+  <body style="font-family: 'Roboto', sans-serif">
     <div class="navbar navbar--extended">
       <nav class="nav__mobile"></nav>
       <div class="container">
         <div class="navbar__inner">
-          <a href="index.html" class="navbar__logo" style="color: #303030;">William Jin</a>
+          <a href="index.html" class="navbar__logo" style="color: #303030">William Jin</a>
           <nav class="navbar__menu">
             <ul>
               <li><a href="index.html">Home</a></li>
@@ -36,26 +36,26 @@
         </div>
       </div>
     </div>
-    <div class="expanded landing__section" style="background-color: #fafafa; height: 100vh;">
+    <div class="expanded landing__section" style="background-color: #fafafa; height: 100vh">
       <div class="container">
         <div class="expanded__inner">
-          <div class="expanded__content" style="width: 65%;">
+          <div class="expanded__content" style="width: 65%">
             <div class="bio">
-              <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 25%;">
+              <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 25%">
                 <strong>Hi, I'm William !</strong>
                 <br />
-                <span style="font-size: 2rem; font-weight: 500;">I design (almost) anything.</span>
+                <span style="font-size: 2rem; font-weight: 500">I design (almost) anything.</span>
               </h1>
-              <div style="width: 100%;">
+              <div style="width: 100%">
                 <p class="expanded__text">
-                  <span style="color: teal;">Product Designer</span>
+                  <span style="color: teal">Product Designer</span>
                   @ Carnegie Mellon
                   <br />
                   Former intern at
-                  <span style="color: teal;">VMware, IBM, Tencent and Sinovation Ventures.</span>
+                  <span style="color: teal">VMware, IBM, Tencent and Sinovation Ventures.</span>
 
                   I'm passionate about creating great products by combining
-                  <span style="color: teal;">ux, business and technology.</span>
+                  <span style="color: teal">ux, business and technology.</span>
                   <!-- . You can view my
                   <a href="playground.html" class="alink loud-link-hover" data-sound="button3">
                     <b>⚽ Playground</b>
@@ -86,7 +86,7 @@
                 target="_blank"
                 href="./pdfs/resume.pdf"
                 class="resume button button__primary loud-link-hover"
-                style="letter-spacing: 1px;"
+                style="letter-spacing: 1px"
                 data-sound="button3"
               >
                 📝 My Resume
@@ -97,7 +97,7 @@
             <img
               src="./images/undraw_thought_process_67my 1.svg"
               width="80%"
-              style="margin-left: -30%; margin-top: 20%;"
+              style="margin-left: -30%; margin-top: 20%"
             />
           </div>
           <div class="expanded__media"></div>
@@ -105,7 +105,7 @@
       </div>
     </div>
 
-    <div class="hero__sub" style="margin-top: -50px;">
+    <div class="hero__sub" style="margin-top: -50px">
       <span id="scrollToNext">
         <svg
           version="1.1"
@@ -116,7 +116,7 @@
           class="hero__sub__down"
           fill="currentColor"
           viewBox="0 0 512 512"
-          style="enable-background: new 0 0 512 512;"
+          style="enable-background: new 0 0 512 512"
           xml:space="preserve"
         >
           <path
@@ -128,27 +128,15 @@
 
     <div
       class="expanded landing__section"
-      style="background-color: #f4f5f6; background-image: url(./images/VMware/89.png);"
+      style="background-color: #f4f5f6; background-image: url(./images/VMware/89.png)"
     >
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: #fff; max-width: 120%;">
-              Product Design Internship @ VMware
-            </h1>
-            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Internship, 2020</p>
-            <p class="expanded__text" style="color: #fff;">
-              Two projects during my 12-week internship at VMware.
-            </p>
-            <a
-              target="_blank"
-              href="https://www.figma.com/proto/8Xp4Lz4rBx2HqWwu6sqCKx/Internship-Presentation?node-id=4%3A0&viewport=457%2C261%2C0.1459026038646698&scaling=min-zoom"
-              class="resume button button__primary loud-link-hover"
-              style="letter-spacing: 1px;"
-              data-sound="button3"
-            >
-              slides
-            </a>
+            <h1 class="expanded__title" style="color: #fff; max-width: 120%">Product Design Internship @ VMware</h1>
+            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5)">Internship, 2020</p>
+            <p class="expanded__text" style="color: #fff">Two projects during my 12-week internship at VMware.</p>
+            <a class="resume button button__primary" style="letter-spacing: 1px; opacity: 0.4">Slides - Coming Soon!</a>
           </div>
 
           <!-- <div class="expanded__media" style="">
@@ -169,22 +157,22 @@
         </div>
       </div>
     </div>
-    <div class="expanded landing__section" style="background-color: #efeeee;">
-      <div class="container" style="margin-top: 100px;">
+    <div class="expanded landing__section" style="background-color: #efeeee">
+      <div class="container" style="margin-top: 100px">
         <div class="expanded__inner">
-          <div class="expanded__content bio" style="width: 45%;">
+          <div class="expanded__content bio" style="width: 45%">
             <h1 class="expanded__title">Tiny</h1>
             <p class="subtitle">Independent Project, 2020</p>
             <p class="expanded__text">
               An intuitive, minimal, and beautiful To-do List App helping users organize and categorize their personal
               to-dos.
             </p>
-            <div style="display: flex; margin-bottom: 100px;">
+            <div style="display: flex; margin-bottom: 100px">
               <a
                 target="_blank"
                 href="https://williamj-in.github.io/tiny-todo-list/#/"
                 class="resume button button__primary loud-link-hover"
-                style="letter-spacing: 1px;"
+                style="letter-spacing: 1px"
                 data-sound="button3"
               >
                 Try it out!
@@ -193,7 +181,7 @@
                 target="_blank"
                 href="https://medium.com/@williamjinq/tiny-an-intuitive-minimal-and-beautiful-to-do-list-app-14aac376889b"
                 class="resume button button__primary secondary loud-link-hover"
-                style="letter-spacing: 1px;"
+                style="letter-spacing: 1px"
                 data-sound="button3"
               >
                 More about process
@@ -201,28 +189,25 @@
             </div>
           </div>
 
-          <div class="expanded__media" style="width: 55%;">
-            <img src="./images/Tiny/title_new.png" width="100%" style="margin-left: 7rem;" />
+          <div class="expanded__media" style="width: 55%">
+            <img src="./images/Tiny/title_new.png" width="100%" style="margin-left: 7rem" />
           </div>
         </div>
       </div>
     </div>
-    <div
-      class="expanded landing__section"
-      style="background-image: linear-gradient(to bottom right, #7775d3, #3d3ca5);"
-    >
+    <div class="expanded landing__section" style="background-image: linear-gradient(to bottom right, #7775d3, #3d3ca5)">
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: white;">Quenews</h1>
-            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Group Project (2 people), 2019</p>
-            <p class="expanded__text" style="color: white;">
+            <h1 class="expanded__title" style="color: white">Quenews</h1>
+            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5)">Group Project (2 people), 2019</p>
+            <p class="expanded__text" style="color: white">
               A queue-based news app for commuters taking public transit to make their life more meaningful.
             </p>
             <a
               href="Quenews.html"
               class="resume button button__primary loud-link-hover"
-              style="letter-spacing: 1px;"
+              style="letter-spacing: 1px"
               data-sound="button3"
             >
               Design Process
@@ -235,22 +220,17 @@
         </div>
       </div>
     </div>
-    <div
-      class="expanded landing__section"
-      style="background-image: linear-gradient(to bottom right, #4796e1, #225dc0);"
-    >
+    <div class="expanded landing__section" style="background-image: linear-gradient(to bottom right, #4796e1, #225dc0)">
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: #ffffff;">Product Design Internship @ IBM</h1>
-            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Feb - Jun 2019</p>
-            <p class="expanded__text" style="color: #ffffff;">
-              Several projects during my internship in IBM.
-            </p>
+            <h1 class="expanded__title" style="color: #ffffff">Product Design Internship @ IBM</h1>
+            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5)">Feb - Jun 2019</p>
+            <p class="expanded__text" style="color: #ffffff">Several projects during my internship in IBM.</p>
             <a
               href="IBM.html"
               class="resume button button__primary loud-link-hover"
-              style="letter-spacing: 1px;"
+              style="letter-spacing: 1px"
               data-sound="button3"
             >
               Internship Projects
@@ -258,7 +238,7 @@
           </div>
 
           <div class="expanded__media">
-            <img src="./images/IBM/0.png" width="80%" style="margin-top: 150px; margin-bottom: 150px;" />
+            <img src="./images/IBM/0.png" width="80%" style="margin-top: 150px; margin-bottom: 150px" />
           </div>
         </div>
       </div>
@@ -290,9 +270,7 @@
           <a href="index.html" class="footer__textLogo">William Jin</a>
           <div class="footer__data">
             <div class="footer__data__item">
-              <div class="footer__row">
-                Email: qiuj@andrew.cmu.edu
-              </div>
+              <div class="footer__row">Email: qiuj@andrew.cmu.edu</div>
               <div class="footer__row"></div>
             </div>
           </div>
