--- a/index.html
+++ b/index.html
@@ -136,7 +136,15 @@
             <h1 class="expanded__title" style="color: #fff; max-width: 120%">Product Design Internship @ VMware</h1>
             <p class="subtitle" style="color: rgba(255, 255, 255, 0.5)">Internship, 2020</p>
             <p class="expanded__text" style="color: #fff">Two projects during my 12-week internship at VMware.</p>
-            <a class="resume button button__primary" style="letter-spacing: 1px; opacity: 0.4">Slides - Coming Soon!</a>
+            <a
+              target="_blank"
+              class="resume button button__primary loud-link-hover"
+              style="letter-spacing: 1px"
+              href="https://www.figma.com/proto/eJAbkEM5Sl0tJn9rZYyOC7/VMware-Internship?node-id=1%3A41634&viewport=617%2C376%2C0.03186267241835594&scaling=scale-down-width"
+              data-sound="button3"
+            >
+              Slides
+            </a>
           </div>
 
           <!-- <div class="expanded__media" style="">
