--- a/index.html
+++ b/index.html
@@ -212,11 +212,14 @@
         </div>
       </div>
     </div>
-    <div class="expanded landing__section" style="background-color: #cfcfcf">
+    <div
+      class="expanded landing__section"
+      style="background-image: url(./images/Tinytab_cover.jpg); background-size: cover; background-position: center"
+    >
       <div class="container" style="margin-top: 100px">
         <div class="expanded__inner">
-          <div class="expanded__content bio" style="width: 45%">
-            <h1 class="expanded__title">Tinytab</h1>
+          <div class="expanded__content bio" style="width: 45%; color: #fff">
+            <h1 class="expanded__title" style="color: #efeeee">Tinytab</h1>
             <p class="subtitle">Independent Project, 2020</p>
             <p class="expanded__text">A chrome extension to create a new tab page to help users better focus.</p>
             <div style="display: flex; margin-bottom: 100px">
@@ -224,7 +227,7 @@
                 target="_blank"
                 href="https://williamj-in.github.io/tiny-start-page"
                 class="resume button button__primary loud-link-hover"
-                style="letter-spacing: 1px"
+                style="letter-spacing: 1px; color: #303030; background-color: #efeeee"
                 data-sound="button3"
               >
                 Demo
@@ -233,7 +236,7 @@
                 target="_blank"
                 href="https://github.com/williamj-in/tinytab"
                 class="resume button button__primary secondary loud-link-hover"
-                style="letter-spacing: 1px"
+                style="letter-spacing: 1px; border: 1px solid #efeeee; color: #efeeee"
                 data-sound="button3"
               >
                 Download & Usage
@@ -241,13 +244,7 @@
             </div>
           </div>
 
-          <div class="expanded__media" style="width: 55%">
-            <img
-              src="./images/Tinytab.png"
-              width="100%"
-              style="margin-left: 5rem; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); border-radius: 10px"
-            />
-          </div>
+          <div class="expanded__media" style="width: 55%"></div>
         </div>
       </div>
     </div>
@@ -274,26 +271,6 @@
         </div>
       </div>
     </div>
-    <!-- <div
-      class="expanded landing__section"
-      style="background-image: url('images/Pianooooo/0.jpg'); -webkit-background-size: cover;"
-    >
-      <div class="container">
-        <div class="expanded__inner">
-          <div class="expanded__content bio">
-            <h1 class="expanded__title">Pianooooo</h1>
-            <p class="subtitle">Independent Project, 2017</p>
-            <p class="expanded__text">A piano-sharing business model.</p>
-          </div>
-
-          <div class="expanded__media">
-            <a href="Pianooooo.html" class="loud-link-hover" data-sound="button3">
-              <img class="landing_img" src="./images/Pianooooo/phone.png" width="60%" style="opacity: 0.9;" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     <div class="footer footer--dark">
       <div class="container">
