delete unrelevant files

--- a/index.html
+++ b/index.html
@@ -56,29 +56,6 @@
 
                   I'm passionate about creating great products by combining
                   <span style="color: teal">ux, business and technology.</span>
-                  <!-- . You can view my
-                  <a href="playground.html" class="alink loud-link-hover" data-sound="button3">
-                    <b>⚽ Playground</b>
-                  </a>
-                  , find me on
-                  <a
-                    href="https://www.linkedin.com/in/qiu-william-jin-405929168/"
-                    target="_blank"
-                    class="alink loud-link-hover"
-                    data-sound="button3"
-                  >
-                    <b>👔 LinkedIn</b>
-                  </a>
-                  , or just send me an
-                  <a
-                    target="_blank"
-                    href="mailto:qiuj@andrew.cmu.edu"
-                    class="alink loud-link-hover"
-                    data-sound="button3"
-                  >
-                    <b>📧 Email</b>
-                  </a>
-                  . -->
                 </p>
               </div>
 
@@ -234,12 +211,12 @@
               </a>
               <a
                 target="_blank"
-                href="https://github.com/williamj-in/tinytab"
+                href="https://chrome.google.com/webstore/detail/tinytab/bmlbibebemncadbgojnhccmmdojblomm/related?hl=en"
                 class="resume button button__primary secondary loud-link-hover"
                 style="letter-spacing: 1px; border: 1px solid #efeeee; color: #efeeee"
                 data-sound="button3"
               >
-                Download & Usage
+                Usage
               </a>
             </div>
           </div>
