--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="expanded__inner">
         <div class="expanded__content" style="width: 65%">
           <div class="bio">
-            <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 25%">
+            <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 20vh">
               <strong>Hi, I'm William !</strong>
               <br />
               <span style="font-size: 2rem; font-weight: 500">I design (almost) anything.</span>
