--- a/index_beta.html
+++ b/index_beta.html
@@ -46,11 +46,11 @@
                 <strong>William Jin</strong>
                 <strong>金秋</strong>
                 <br />
-                <span style="font-size: 2rem; font-weight: 500">I design (almost) anything.</span>
+                <span style="font-size: 2rem; font-weight: 500">Product Innovator.</span>
               </h1>
               <div style="width: 100%">
                 <p class="expanded__text">
-                  <span style="color: teal">Product Designer</span>
+                  <span style="color: teal">Graduate Student</span>
                   @ Carnegie Mellon
                   <br />
                   Former intern at
@@ -58,29 +58,6 @@
 
                   I'm passionate about creating great products by combining
                   <span style="color: teal">ux, business and technology.</span>
-                  <!-- . You can view my
-                  <a href="playground.html" class="alink loud-link-hover" data-sound="button3">
-                    <b>⚽ Playground</b>
-                  </a>
-                  , find me on
-                  <a
-                    href="https://www.linkedin.com/in/qiu-william-jin-405929168/"
-                    target="_blank"
-                    class="alink loud-link-hover"
-                    data-sound="button3"
-                  >
-                    <b>👔 LinkedIn</b>
-                  </a>
-                  , or just send me an
-                  <a
-                    target="_blank"
-                    href="mailto:qiuj@andrew.cmu.edu"
-                    class="alink loud-link-hover"
-                    data-sound="button3"
-                  >
-                    <b>📧 Email</b>
-                  </a>
-                  . -->
                 </p>
               </div>
 
@@ -95,14 +72,6 @@
               </a>
             </div>
           </div>
-          <div class="expanded__media">
-            <img
-              src="./images/undraw_thought_process_67my 1.svg"
-              width="80%"
-              style="margin-left: -30%; margin-top: 20%"
-            />
-          </div>
-          <div class="expanded__media"></div>
         </div>
       </div>
     </div>
@@ -128,29 +97,6 @@
       </span>
     </div>
 
-    <div
-      class="expanded landing__section"
-      style="background-color: #f4f5f6; background-image: url(./images/VMware/89.png)"
-    >
-      <div class="container">
-        <div class="expanded__inner">
-          <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: #fff; max-width: 120%">Product Design Internship @ VMware</h1>
-            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5)">Internship, 2020</p>
-            <p class="expanded__text" style="color: #fff">Two projects during my 12-week internship at VMware.</p>
-            <a
-              target="_blank"
-              class="resume button button__primary loud-link-hover"
-              style="letter-spacing: 1px"
-              href="https://www.figma.com/proto/eJAbkEM5Sl0tJn9rZYyOC7/VMware-Internship?node-id=1%3A41634&viewport=617%2C376%2C0.03186267241835594&scaling=scale-down-width"
-              data-sound="button3"
-            >
-              Slides
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="expanded landing__section" style="background-color: #efeeee">
       <div class="container" style="margin-top: 100px">
         <div class="expanded__inner">
@@ -189,31 +135,7 @@
         </div>
       </div>
     </div>
-    <div class="expanded landing__section" style="background-image: linear-gradient(to bottom right, #7775d3, #3d3ca5)">
-      <div class="container">
-        <div class="expanded__inner">
-          <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: white">Quenews</h1>
-            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5)">Group Project (2 people), 2019</p>
-            <p class="expanded__text" style="color: white">
-              A queue-based news app for commuters taking public transit to make their life more meaningful.
-            </p>
-            <a
-              href="Quenews.html"
-              class="resume button button__primary loud-link-hover"
-              style="letter-spacing: 1px"
-              data-sound="button3"
-            >
-              Design Process
-            </a>
-          </div>
 
-          <div class="expanded__media">
-            <img src="./images/Quenews/Queue_Mockup.png" width="70%" />
-          </div>
-        </div>
-      </div>
-    </div>
     <div
       class="expanded landing__section"
       style="background-image: url(./images/Tinytab_cover.jpg); background-size: cover; background-position: center"
@@ -250,29 +172,6 @@
         </div>
       </div>
     </div>
-    <div class="expanded landing__section" style="background-image: linear-gradient(to bottom right, #4796e1, #225dc0)">
-      <div class="container">
-        <div class="expanded__inner">
-          <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: #ffffff">Product Design Internship @ IBM</h1>
-            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5)">Feb - Jun 2019</p>
-            <p class="expanded__text" style="color: #ffffff">Several projects during my internship in IBM.</p>
-            <a
-              href="IBM.html"
-              class="resume button button__primary loud-link-hover"
-              style="letter-spacing: 1px"
-              data-sound="button3"
-            >
-              Internship Projects
-            </a>
-          </div>
-
-          <div class="expanded__media">
-            <img src="./images/IBM/0.png" width="80%" style="margin-top: 150px; margin-bottom: 150px" />
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="footer footer--dark">
       <div class="container">
@@ -281,7 +180,10 @@
           <div class="footer__data">
             <div class="footer__data__item">
               <div class="footer__row">Email: qiuj@andrew.cmu.edu</div>
-              <div class="footer__row"></div>
+              <div class="footer__row">
+                Github:
+                <a href="https://github.com/williamj-in">https://github.com/williamj-in</a>
+              </div>
             </div>
           </div>
         </div>
