--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <body style="font-family: 'Roboto', sans-serif">
-    <div class="navbar navbar--extended">
-      <nav class="nav__mobile"></nav>
-      <div class="container">
-        <div class="navbar__inner">
-          <a href="index.html" class="navbar__logo" style="color: #303030">William Jin</a>
-          <nav class="navbar__menu">
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="index_beta.html">Beta</a></li>
-            </ul>
-          </nav>
-          <div class="navbar__menu-mob">
-            <a href="" id="toggle">
-              <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                <path
-                  fill="currentColor"
-                  d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
-                  class=""
-                ></path>
-              </svg>
-            </a>
-          </div>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Shanti&display=swap" rel="stylesheet" />
+  <meta class="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <title>William Jin | Design Anything</title>
+  <!-- Don't forget to add your metadata here -->
+  <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="stylesheet" href="css/myStyle.css" />
+</head>
+
+<body style="font-family: 'Roboto', sans-serif">
+  <div class="navbar navbar--extended">
+    <nav class="nav__mobile"></nav>
+    <div class="container">
+      <div class="navbar__inner">
+        <a href="index.html" class="navbar__logo" style="color: #303030">William Jin</a>
+        <nav class="navbar__menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index_beta.html">Beta</a></li>
+          </ul>
+        </nav>
+        <div class="navbar__menu-mob">
+          <a href="" id="toggle">
+            <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+              <path fill="currentColor"
+                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
+                class=""></path>
+            </svg>
+          </a>
         </div>
       </div>
     </div>
-    <div class="expanded landing__section" style="background-color: #fafafa; height: 100vh">
-      <div class="container">
-        <div class="expanded__inner">
-          <div class="expanded__content" style="width: 65%">
-            <div class="bio">
-              <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 25%">
-                <strong>William Jin</strong>
-                <strong>金秋</strong>
+  </div>
+  <div class="expanded landing__section" style="background-color: #fafafa; height: 100vh">
+    <div class="container">
+      <div class="expanded__inner">
+        <div class="expanded__content" style="width: 65%">
+          <div class="bio">
+            <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 20vh">
+              <strong>Hi, I'm William !</strong>
+              <br />
+              <span style="font-size: 2rem; font-weight: 500">I design (almost) anything.</span>
+            </h1>
+            <div style="width: 100%">
+              <p class="expanded__text">
+                <span style="color: teal">Product Designer</span>
+                @ Carnegie Mellon
                 <br />
                 Former intern at
                 <span style="color: teal">VMware, IBM, Tencent and Sinovation Ventures.</span>
