--- a/index_beta.html
+++ b/index_beta.html
@@ -119,7 +119,7 @@
               </a>
               <a
                 target="_blank"
-                href="https://medium.com/@williamjinq/tiny-an-intuitive-minimal-and-beautiful-to-do-list-app-14aac376889b"
+                href="https://www.figma.com/proto/UrsZVnQL8omEO6GPEuujlM/Slide?node-id=102%3A9&viewport=450%2C403%2C0.0731247067451477&scaling=min-zoom"
                 class="resume button button__primary secondary loud-link-hover"
                 style="letter-spacing: 1px"
                 data-sound="button3"
@@ -158,12 +158,12 @@
               </a>
               <a
                 target="_blank"
-                href="https://github.com/williamj-in/tinytab"
+                href="https://chrome.google.com/webstore/detail/tinytab/bmlbibebemncadbgojnhccmmdojblomm/related?hl=en"
                 class="resume button button__primary secondary loud-link-hover"
                 style="letter-spacing: 1px; border: 1px solid #efeeee; color: #efeeee"
                 data-sound="button3"
               >
-                Download & Usage
+                Usage
               </a>
             </div>
           </div>
