--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <a href="index.html" class="navbar__logo" style="color: #303030">William Jin</a>
         <nav class="navbar__menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index_beta.html">Beta</a></li>
+            <li><a href="index_beta.html">Home</a></li>
+            <li><a href="index.html">Archive</a></li>
           </ul>
         </nav>
         <div class="navbar__menu-mob">
