changed tinytab link

--- a/archive.html
+++ b/archive.html
@@ -166,7 +166,7 @@
           <p class="subtitle">Independent Project, 2020</p>
           <p class="expanded__text">A chrome extension to create a new tab page to help users better focus.</p>
           <div style="display: flex; margin-bottom: 100px">
-            <a target="_blank" href="https://williamj-in.github.io/tiny-start-page"
+            <a target="_blank" href="https://williamj-in.github.io/tinytab"
               class="resume button button__primary loud-link-hover"
               style="letter-spacing: 1px; color: #303030; background-color: #efeeee" data-sound="button3">
               Demo
