--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div style="display: flex; margin-bottom: 100px">
               <a
                 target="_blank"
-                href="https://williamj-in.github.io/tiny-start-page"
+                href="https://williamj-in.github.io/tinytab"
                 class="resume button button__primary loud-link-hover"
                 style="letter-spacing: 1px; color: #303030; background-color: #efeeee"
                 data-sound="button3"
