--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <div class="container">
         <div class="navbar__inner">
           <a href="index.html" class="navbar__logo" style="color: #303030">William Jin</a>
-          <nav class="navbar__menu">
-            <ul>
+          <!-- <nav class="navbar__menu"> -->
+            <!-- <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="archive.html">Archive</a></li>
-            </ul>
-          </nav>
+            </ul> -->
+          <!-- </nav> -->
           <div class="navbar__menu-mob">
             <a href="" id="toggle">
               <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
