--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shanti&display=swap" rel="stylesheet" />
     <meta class="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>William Jin | Design Anything</title>
+    <title>William Jin | Product Innovation</title>
     <!-- Don't forget to add your metadata here -->
     <link rel="stylesheet" href="css/style.min.css" />
     <link rel="stylesheet" href="css/myStyle.css" />
