--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" /> -->
   <link href="https://fonts.googleapis.com/css2?family=Shanti&display=swap" rel="stylesheet" />
   <meta class="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="css/myStyle.css" />
 </head>
 
-<body style="font-family: 'Roboto', sans-serif">
-  <div class="navbar navbar--extended">
+<body style="background-color: #fafafa; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+  <!-- <div class="navbar navbar--extended">
     <nav class="nav__mobile"></nav>
     <div class="container">
       <div class="navbar__inner">
@@ -28,7 +28,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="expanded landing__section" style="background-color: #fafafa; height: 100vh">
     <div class="container">
       <div class="expanded__inner">
@@ -42,21 +42,19 @@
             </h1>
             <div style="width: 100%">
               <p class="expanded__text">
-                <span style="color: teal">Product Manager</span> @ Kuaishou,
-                <span style="color: teal">Graduate Student</span>
-                @ Carnegie Mellon
+                <span style="color: teal">PM</span> @ 快手, 研究生毕业于 @ CMU.
                 <br />
-                Former intern at
-                <span style="color: teal">VMware, IBM, Tencent and Sinovation Ventures.</span>
-
-                I'm passionate about creating great products by combining
-                <span style="color: teal">ux, business and technology.</span>
+                Former intern @
+               VMware, IBM, Tencent and Sinovation Ventures.
+<br>
+                产品创新者，坚信好的产品是技术、商业以及用户体验的有机、平等结合。高效学习者，能够快速、跨界学习吸收新的知识，并转为己用。平时喜欢想一些产品的idea并记录下来，有空会自己实现一些。
+               
               </p>
             </div>
 
             <a target="_blank" href="./pdfs/resume.pdf" class="resume button button__primary loud-link-hover"
               style="letter-spacing: 1px" data-sound="button3">
-              📝 My Resume
+              📝 简历
             </a>
           </div>
         </div>
@@ -113,15 +111,14 @@
       <div class="expanded__inner">
         <div class="expanded__content bio" style="width: 45%">
           <h1 class="expanded__title">Tiny</h1>
-          <p class="subtitle">Independent Project, 2020</p>
+          <p class="subtitle">个人项目, 2020年</p>
           <p class="expanded__text">
-            An intuitive, minimal, and beautiful To-do List App helping users organize and categorize their personal
-            to-dos.
+            一个直观、极简、开箱即用的GTD网页应用，帮助用户整理他们的个人待办事项，无需登录。
           </p>
           <div style="display: flex; margin-bottom: 100px">
             <a target="_blank" href="https://williamj-in.github.io/tiny-todo-list/#/"
               class="resume button button__primary loud-link-hover" style="letter-spacing: 1px" data-sound="button3">
-              Try it out!
+              试试就试试
             </a>
             <!-- <a
                 target="_blank"
@@ -148,19 +145,19 @@
       <div class="expanded__inner">
         <div class="expanded__content bio" style="width: 45%; color: #fff">
           <h1 class="expanded__title" style="color: #efeeee">Tinytab</h1>
-          <p class="subtitle">Independent Project, 2020</p>
-          <p class="expanded__text">A chrome extension to create a new tab page to help users better focus.</p>
+          <p class="subtitle" style="color: #eee;">个人项目, 2020年</p>
+          <p class="expanded__text">一个帮助人们更好地专注的新标签页插件。适用于chrome、edge。</p>
           <div style="display: flex; margin-bottom: 100px">
             <a target="_blank" href="https://williamj-in.github.io/tinytab"
               class="resume button button__primary loud-link-hover"
               style="letter-spacing: 1px; color: #303030; background-color: #efeeee" data-sound="button3">
-              Demo
+              预览
             </a>
             <a target="_blank"
               href="https://chrome.google.com/webstore/detail/tinytab/bmlbibebemncadbgojnhccmmdojblomm/related?hl=en"
               class="resume button button__primary secondary loud-link-hover"
               style="letter-spacing: 1px; border: 1px solid #efeeee; color: #efeeee" data-sound="button3">
-              Usage
+              安装及使用
             </a>
           </div>
         </div>
@@ -176,15 +173,15 @@
       <div class="expanded__inner">
         <div class="expanded__content bio" style="width: 45%">
           <h1 class="expanded__title" style="color: #fff;">Golf Desk</h1>
-          <p class="subtitle" style="color: #eee;">Group Project, 2018 / Reddot Award 2018: Winner</p>
+          <p class="subtitle" style="color: #eee;">团队项目（2人）, 2018年 / <span style="color: #ef5b5b;"> <b> Reddot Award 2018: Winner </b></span></p>
           <p class="expanded__text" style="color: #fff;">
-            Life should be as simple as Golf Desk, which is both functional and aesthetically sensitive.
+            生活应该像Golf Desk一样简单, 同时具有功能以及审美价值。
           </p>
           <div style="display: flex; margin-bottom: 100px">
             <a target="_blank" href="https://www.red-dot.org/project/golf-desk-26546"
               class="resume button button__primary loud-link-hover"
               style="letter-spacing: 1px; color: #303030; background-color: #efeeee" data-sound="button3">
-              View More
+              查看获奖介绍
             </a>
 
           </div>
