--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             一个简单、易用，并且美观的每日提醒事项应用。
           </p>
           <div style="display: flex; margin-bottom: 100px">
-            <a target="_blank">
+            <a target="_blank" href="https://apps.apple.com/cn/app/everyday-%E6%AF%8F%E6%97%A5%E6%8F%90%E9%86%92%E4%BA%8B%E9%A1%B9/id1563097493">
               <img src="./images/Everyday/app_store_button.svg" alt="" style="width: 120%;">
             </a>
             <!-- <a
