--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Former intern @
                VMware, IBM, Tencent and Sinovation Ventures.
 <br>
-                产品创新者，坚信好的产品是技术、商业以及用户体验的有机、均衡结合。高效学习者，能够快速、跨界学习吸收新的知识，并转为己用。平时喜欢想一些产品的idea并记录下来，有空会自己实现一些。
+                产品创新者、独立开发者，坚信好的产品是技术、商业以及用户体验的有机、均衡结合。
                
               </p>
             </div>
