--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </h1>
             <div style="width: 100%">
               <p class="expanded__text">
-                <span style="color: teal">PM</span> @ 快手, 研究生毕业于 @ CMU.
+                <span style="color: teal"><b>PM</b></span> @ 快手, 研究生毕业于 @ CMU.
                 <br />
                 Former intern @
                VMware, IBM, Tencent and Sinovation Ventures.
@@ -50,12 +50,20 @@
                 产品创新者、独立开发者，坚信好的产品是技术、商业以及用户体验的有机、均衡结合。
                
               </p>
+              <p class="expanded__text">
+                <span style="color: teal"><b>
+                Email: 
+              </b></span>
+              williamjinq@outlook.com
+              </p>
             </div>
 
-            <a target="_blank" href="./pdfs/resume.pdf" class="resume button button__primary loud-link-hover"
+            <!-- <a target="_blank" 
+            href="./pdfs/resume.pdf" 
+            class="resume button button__primary loud-link-hover"
               style="letter-spacing: 1px" data-sound="button3">
               📝 简历
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
