--- a/index.html
+++ b/index.html
@@ -93,15 +93,7 @@
             <a target="_blank" href="https://apps.apple.com/cn/app/everyday-%E6%AF%8F%E6%97%A5%E6%8F%90%E9%86%92%E4%BA%8B%E9%A1%B9/id1563097493">
               <img src="./images/Everyday/app_store_button.svg" alt="" style="width: 120%;">
             </a>
-            <!-- <a
-                target="_blank"
-                href="https://www.figma.com/proto/UrsZVnQL8omEO6GPEuujlM/Slide?node-id=102%3A9&viewport=450%2C403%2C0.0731247067451477&scaling=min-zoom"
-                class="resume button button__primary secondary loud-link-hover"
-                style="letter-spacing: 1px"
-                data-sound="button3"
-              >
-                App网站
-              </a> -->
+            
           </div>
         </div>
 
@@ -123,19 +115,11 @@
             一个直观、极简、开箱即用的GTD网页应用，帮助用户整理他们的个人待办事项，无需登录。
           </p>
           <div style="display: flex; margin-bottom: 100px">
-            <a target="_blank" href="https://williamj-in.github.io/tiny-todo-list/#/"
+            <a target="_blank" href="https://kouyaruten.github.io/tiny-todo-list/#/"
               class="resume button button__primary loud-link-hover" style="letter-spacing: 1px" data-sound="button3">
               试试就试试
             </a>
-            <!-- <a
-                target="_blank"
-                href="https://www.figma.com/proto/UrsZVnQL8omEO6GPEuujlM/Slide?node-id=102%3A9&viewport=450%2C403%2C0.0731247067451477&scaling=min-zoom"
-                class="resume button button__primary secondary loud-link-hover"
-                style="letter-spacing: 1px"
-                data-sound="button3"
-              >
-                More about process
-              </a> -->
+            
           </div>
         </div>
 
@@ -155,7 +139,7 @@
           <p class="subtitle" style="color: #eee;">个人项目, 2020年</p>
           <p class="expanded__text">一个帮助人们更好地专注的新标签页插件。适用于chrome、edge。</p>
           <div style="display: flex; margin-bottom: 100px">
-            <a target="_blank" href="https://williamj-in.github.io/tinytab"
+            <a target="_blank" href="https://kouyaruten.github.io/tinytab/"
               class="resume button button__primary loud-link-hover"
               style="letter-spacing: 1px; color: #303030; background-color: #efeeee" data-sound="button3">
               预览
@@ -206,7 +190,7 @@
             <div class="footer__row">Email: qiuj@andrew.cmu.edu</div>
             <div class="footer__row">
               Github:
-              <a href="https://github.com/williamj-in">https://github.com/williamj-in</a>
+              <a href="https://github.com/kouyaruten">https://github.com/kouyaruten</a>
             </div>
           </div>
         </div>
