--- a/index.html
+++ b/index.html
@@ -11,23 +11,7 @@
 </head>
 
 <body style="background-color: #fafafa; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
-  <!-- <div class="navbar navbar--extended">
-    <nav class="nav__mobile"></nav>
-    <div class="container">
-      <div class="navbar__inner">
-        <a href="index.html" class="navbar__logo" style="color: #303030">William Jin</a>
-        <div class="navbar__menu-mob">
-          <a href="" id="toggle">
-            <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-              <path fill="currentColor"
-                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
-                class=""></path>
-            </svg>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div> -->
+  
   <div class="expanded landing__section" style="background-color: #fafafa; height: 100vh">
     <div class="container">
       <div class="expanded__inner">
@@ -78,6 +62,31 @@
           d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3z" />
       </svg>
     </span>
+  </div>
+
+  <div class="expanded landing__section" style="background-color: #E1E1EB;">
+    <div class="container" style="margin-top: 100px">
+      <div class="expanded__inner">
+        <div class="expanded__content bio" style="width: 45%">
+          <h1 class="expanded__title">Neko - 敬请期待！</h1>
+          <p class="subtitle">团队项目（2人）, 2021年；我负责产品+开发</p>
+          <p class="expanded__text">
+            一个在手机桌面养猫，并帮助自己养成习惯、完成工作的应用/游戏。
+          </p>
+          <div style="display: flex; margin-bottom: 100px">
+            <a>
+              <img src="./images/Everyday/app_store_button.svg" alt="" style="width: 120%;">
+            </a>
+            
+          </div>
+        </div>
+
+        <!-- <div class="expanded__media" style="width: 55%">
+          <img src="./images/Everyday/cover-light.png" width="40%" style="margin-left: 6rem; float: left" />
+          <img src="./images/Everyday/cover-dark.png" width="40%" />
+        </div> -->
+      </div>
+    </div>
   </div>
 
   <div class="expanded landing__section" style="background-image: linear-gradient(to bottom right, #25335A, #141824)">
