--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
           </div>
         </div>
 
-        <!-- <div class="expanded__media" style="width: 55%">
-          <img src="./images/Everyday/cover-light.png" width="40%" style="margin-left: 6rem; float: left" />
-          <img src="./images/Everyday/cover-dark.png" width="40%" />
-        </div> -->
+        <div class="expanded__media" style="width: 55%">
+          <img src="./images/Neko/1.png" width="40%" style="margin-left: 6rem; float: left" />
+          <img src="./images/Neko/2.png" width="40%" />
+        </div>
       </div>
     </div>
   </div>
